--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MySQL Connection Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/newdb
+spring.datasource.url=jdbc:mysql://gdb:3306/newdb?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 # JPA Properties
